--- a/app/src/main/res/drawable/waste_list_item_date_style.xml
+++ b/app/src/main/res/drawable/waste_list_item_date_style.xml
@@ -2,5 +2,6 @@
 <shape android:shape="rectangle"
     xmlns:android="http://schemas.android.com/apk/res/android">
     <solid android:color="@color/app_secondary" />
-    <corners android:topLeftRadius="10dp" android:bottomLeftRadius="10dp"/>
+    <corners android:topLeftRadius="10dp"
+        android:topRightRadius="10dp"/>
 </shape>
