--- a/app/src/main/res/layout/fragment_analytics.xml
+++ b/app/src/main/res/layout/fragment_analytics.xml
@@ -33,6 +33,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
             android:background="@color/app_secondary"
+            android:padding="5dp"
             android:text="@string/compare_wastes"
             android:textAlignment="center"
             android:textColor="@color/app_primary"
