--- a/app/src/main/res/layout/wastes_list_item.xml
+++ b/app/src/main/res/layout/wastes_list_item.xml
@@ -12,70 +12,86 @@
 
     <TextView
         android:id="@+id/wasteDateText"
-        android:layout_width="wrap_content"
-        android:layout_height="0dp"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
         android:background="@drawable/waste_list_item_date_style"
         android:padding="5dp"
-        android:textAlignment="viewEnd"
-        android:textColor="@color/app_secondary"
+        android:textAlignment="center"
+        android:textColor="@color/app_primary"
         android:textColorHighlight="@color/navbar_text"
         android:textColorLink="@color/navbar_text"
         android:textSize="18sp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <LinearLayout
+        android:id="@+id/linearLayout2"
         android:layout_width="0dp"
         android:layout_height="match_parent"
-        android:layout_marginEnd="8dp"
         android:orientation="horizontal"
+        android:padding="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/wasteDateText">
 
-        <ImageView
-            android:id="@+id/imageView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="10dp"
-            android:layout_weight="1"
-            android:background="@color/app_secondary"
-            android:padding="5dp"
-            app:srcCompat="@drawable/ic_electricity" />
-
-        <TextView
-            android:id="@+id/itemElectricityAmount"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_marginEnd="20dp"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:textAlignment="center"
-            android:textColorHighlight="@color/navbar_text"
-            android:textColorLink="@color/navbar_text"
-            android:textSize="16sp" />
-
-        <ImageView
-            android:id="@+id/imageView1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="10dp"
-            android:layout_weight="1"
-            android:background="@color/app_secondary"
-            android:padding="5dp"
-            app:srcCompat="@drawable/ic_resource" />
-
-        <TextView
-            android:id="@+id/itemResourceAmount"
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:gravity="center"
-            android:textAlignment="center"
-            android:textColorHighlight="@color/navbar_text"
-            android:textColorLink="@color/navbar_text"
-            android:textSize="16sp" />
+            android:orientation="vertical">
+
+            <ImageView
+                android:id="@+id/imageView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:background="@drawable/button_style"
+                android:padding="5dp"
+                app:srcCompat="@drawable/ic_electricity" />
+
+            <TextView
+                android:id="@+id/itemElectricityAmount"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:layout_marginTop="8dp"
+                android:gravity="center"
+                android:textAlignment="center"
+                android:textColorHighlight="@color/navbar_text"
+                android:textColorLink="@color/navbar_text"
+                android:textSize="16sp" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:orientation="vertical">
+
+            <ImageView
+                android:id="@+id/imageView1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:background="@drawable/button_style"
+                android:padding="5dp"
+                app:srcCompat="@drawable/ic_resource" />
+
+            <TextView
+                android:id="@+id/itemResourceAmount"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:layout_marginTop="8dp"
+                android:gravity="center"
+                android:textAlignment="center"
+                android:textColorHighlight="@color/navbar_text"
+                android:textColorLink="@color/navbar_text"
+                android:textSize="16sp" />
+        </LinearLayout>
 
     </LinearLayout>
 
